adding logo-text-footer

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,5 +34,7 @@ jobs:
             php artisan optimize:clear
             php artisan optimize
             rm -rf bootstrap/cache/*
+            chmod 777 -R bootstrap/cache/
+            chmod 777 -R storage/
             exit
           EOF
