--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "swiper": "^11.2.10",
+        "vite-plugin-static-copy": "^3.1.2"
     }
 }
