--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^6.0.1",
         "swiper": "^11.2.10",
-        "vite-plugin-static-copy": "^3.1.2"
+        "vite-plugin-static-copy": "^3.1.2",
+        "vue": "^3.5.20",
+        "vue-router": "^4.5.1"
     }
 }
